# file-watcher

./: .gitignore  BUILD  MODULE.bazel  README.md  gRPC sequence chart.drawio  go.mod
api/proto/: BUILD.bazel  file-walker-service.proto
cmd/client/: BUILD.bazel  client.go  go.mod
cmd/server/: BUILD.bazel  go.mod  server.go
internal/pb/: BUILD.bazel  go.mod
internal/stringutil/: BUILD.bazel  go.mod  strip-control-characters.go
