"""file-watcher is a server/client pair. Server watches file changes and notifies client."""
module(
    name = "file-watcher",
)

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "grpc", version = "1.70.1")
bazel_dep(name = "rules_proto_grpc_go", version = "5.0.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(
    version = "1.23.1",
)
