load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_proto_grpc_go//:deps.bzl", "GRPC_COMPILE_GO", "GRPC_GO_LIBRARY")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "github.com/imafish/file-watcher/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//api/proto:pb_go_grpc_library",
    ] + GRPC_GO_LIBRARY,
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
