load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "pb",
    srcs = [
        "file-watcher-service.pb.go",
        "file-watcher-service_grpc.pb.go",
    ],
    importpath = "github.com/imafish/file-watcher/internal/pb",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
